fixed the routing problem

--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
             <div class="nav-links-cont">
                 <a href="#">Sound Packs</a>
                 <a href="#">Instrumentals</a>
-                <a href="/assets/pages/about.html">About Us</a>
-                <a href="/assets/pages/contact.html">Contacts</a>
+                <a href="assets/pages/about.html">About Us</a>
+                <a href="assets/pages/contact.html">Contacts</a>
             </div>
 
             <div class="login-cont">
-                <a href="/assets/pages/login.html" class="login-link button">Login</a>
+                <a href="assets/pages/login.html" class="login-link button">Login</a>
             </div>
 
         </nav>
@@ -56,7 +56,7 @@
                             <h1 class="logo yellow-text">Afrosounds</h1>
                         </div>
                         <p class="intro-text text">Your one-stop destination for high-quality sound packs and instrumentals. Explore our collection and elevate your music production game.</p>
-                        <a href="/assets/pages/signup.html" class="get-started-link button">Get started</a>
+                        <a href="assets/pages/signup.html" class="get-started-link button">Get started</a>
                     </div>
                 </div>
             </div>
@@ -109,7 +109,7 @@
                         At Afrosounds, we are passionate about music and sound. Our mission is to provide high-quality sound packs and instrumentals that inspire creativity and elevate your projects.
                         Join us on this musical journey!
                     </p>
-                    <a href="/assets/pages/about.html" class="get-started-link button">Learn more</a>
+                    <a href="assets/pages/about.html" class="get-started-link button">Learn more</a>
                     </div>
                 </div>
 
@@ -135,7 +135,7 @@
                             We would love to hear from you! Whether you have questions, feedback, or just want to say hi, feel free to reach out.
                             Our team is here to assist you.
                         </p>
-                        <a href="/assets/pages/contact.html" class="get-started-link button">Contact us</a>
+                        <a href="assets/pages/contact.html" class="get-started-link button">Contact us</a>
                     </div>
                 </div>
             </div>
